# opengl_examples

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: Findlog4cpp.cmake  apitrace.cmake  assets.cmake
examples/assets/: fragment.glsl  vertex.glsl
examples/glfw/: CMakeLists.txt  logger.properties  main.cpp  renderer.cpp  renderer.h
examples/glfw/src/: main.cpp  renderer.cpp  renderer.h
examples/qt/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp
src/: CMakeLists.txt  glengineConfig.cmake.in
src/glengine/: CMakeLists.txt  logger.h  program.cpp  program.h  renderer.cpp  renderer.h  shader.cpp  shader.h  utils.cpp  utils.h
src/glengine/include/glengine/: program.h  renderer.h
src/glengine/src/: program.cpp  renderer.cpp  shader.cpp
