project(opengl_with_glfw)
cmake_minimum_required(VERSION 2.8.7)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
include(assets)
# Instruct CMake to run moc automatically when needed.
if(APITRACE_DEBUG)
	include(apitrace)
endif(APITRACE_DEBUG)

if(NOT DOWNLOAD_THIRD_PARTY_LIBS)
find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
endif(NOT DOWNLOAD_THIRD_PARTY_LIBS)
find_package(glengine REQUIRED) #defines GLENGINE_INCLUDE_DIRS GLENGINE_LIBRARIES
configure_file(logger.properties logger.properties COPYONLY)
include_directories(${GLENGINE_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS} src)
aux_source_directory(src SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} pthread ${GLFW_STATIC_LIBRARIES} ${GLENGINE_LIBRARIES})
if(APITRACE_DEBUG)
	APITRACE_OUTPUT(${PROJECT_NAME})
endif(APITRACE_DEBUG)
COPY_ASSETS(${PROJECT_NAME})
